GNOME Bugzilla – Bug 781846
Fails to build
Last modified: 2017-04-27 17:43:39 UTC
I tried to build GNOME 3.22 with JHBuild and gnome-control-center now fails to build. gsd-device-manager-x11.c: In function ‘device_get_device_type’: gsd-device-manager-x11.c:61:36: error: ‘GSD_DEVICE_TYPE_PAD’ undeclared (first use in this function) return GSD_DEVICE_TYPE_TABLET | GSD_DEVICE_TYPE_PAD;
(In reply to Alberts Muktupāvels from comment #0) > I tried to build GNOME 3.22 with JHBuild and gnome-control-center now fails > to build. > > gsd-device-manager-x11.c: In function ‘device_get_device_type’: > gsd-device-manager-x11.c:61:36: error: ‘GSD_DEVICE_TYPE_PAD’ undeclared > (first use in this function) > return GSD_DEVICE_TYPE_TABLET | GSD_DEVICE_TYPE_PAD; Regression introduced by: commit 30e262fd220eb85bcaa7bb00bd251df1b7598489 Author: Carlos Garnacho <carlosg@gnome.org> Date: Tue Nov 1 12:44:21 2016 +0100 common: Handle pad devices in GsdDeviceManagerX11 We cater for the old(=Wacom) and new(=libinput) type/name schemes, so we don't require a too recent gtk+ just for this.
Created attachment 350564 [details] [review] common: Add "pad" GsdDeviceType to GsdDeviceManager So we can recognize pad devices. Note: Cherry-picked from master commit 176dfca to fix
Review of attachment 350564 [details] [review]: Yeah, I forgot to cherry-pick this one too, sorry.
Attachment 350564 [details] pushed as 18e67c6 - common: Add "pad" GsdDeviceType to GsdDeviceManager