common: Add "pad" GsdDeviceType to GsdDeviceManager

So we can recognize pad devices.

Note:
  Cherry-picked from master commit 176dfca to fix
  https://bugzilla.gnome.org/show_bug.cgi?id=781846